--- a/index.html
+++ b/index.html
@@ -1,4 +1,13 @@
 <html>
+  <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-0YFXBS0EZT"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-0YFXBS0EZT');
+</script>
   <h1>Esta es mi primera pagina con GitHub Pages</h1>
   <p>Gracias GitHub!</p>
 </html>
