--- a/index.html
+++ b/index.html
@@ -76,6 +76,30 @@
       margin: 20px auto;
       display: block;
     }
+
+    .card {
+      background-color: rgba(255, 255, 255, 0.1);
+      padding: 20px;
+      border-radius: 12px;
+      width: 300px;
+      text-align: center;
+      margin: 10px;
+    }
+
+    .card h3 {
+      margin-top: 0;
+    }
+
+    .card p {
+      font-size: 1.1em;
+    }
+
+    .card-container {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
+      gap: 20px;
+    }
   </style>
 </head>
 <body>
@@ -93,31 +117,5 @@
     <a href="#contacto">Contacto</a>
   </nav>
 
-  <section id="sobre-mi">
-    <h2>Sobre mí</h2>
-    <p>Soy un apasionado del triatlón, el skate y compartir mis experiencias deportivas.</p>
-  </section>
+  <sectio
 
-  <section id="que-me-gusta">
-    <h2>Qué me gusta</h2>
-    <p>Disfruto correr en la mañana, andar en bici los fines de semana y nadar en mar abierto.</p>
-  </section>
-
-  <section id="fotos">
-    <h2>Fotos</h2>
-    <p>Próximamente compartiré mis mejores momentos en competencias y entrenamientos.</p>
-  </section>
-
-  <section id="contacto">
-    <h2>Contacto</h2>
-    <p>Puedes escribirme a: <strong>carlos@ejemplo.com</strong></p>
-  </section>
-
-  <footer>
-    © 2025 El Blog de Carlos — Todos los derechos reservados
-  </footer>
-
-  <h1>Esta es mi primera página con GitHub Pages</h1>
-  <p>¡Gracias GitHub!</p>
-</body>
-</html>
