--- a/index.html
+++ b/index.html
@@ -117,5 +117,44 @@
     <a href="#contacto">Contacto</a>
   </nav>
 
-  <sectio
+  <section id="sobre-mi">
+    <h2>Sobre mí</h2>
+    <p>Soy un apasionado del triatlón, el skate y compartir mis experiencias deportivas.</p>
+  </section>
 
+  <section id="que-me-gusta">
+    <h2>Qué me gusta</h2>
+    <div class="card-container">
+      <div class="card">
+        <h3>Maratones</h3>
+        <p>Me encanta correr maratones, desde 10k hasta 42k. Aquí compartiré historias, fotos y tips de mis carreras.</p>
+      </div>
+      <div class="card">
+        <h3>Triatlones</h3>
+        <p>Combinar natación, ciclismo y carrera es un reto que disfruto. Mis experiencias en triatlones estarán aquí.</p>
+      </div>
+      <div class="card">
+        <h3>Mis hijas</h3>
+        <p>También comparto tiempo y aventuras con mis hijas, quienes me inspiran cada día. Aquí pondré momentos únicos.</p>
+      </div>
+    </div>
+  </section>
+
+  <section id="fotos">
+    <h2>Fotos</h2>
+    <p>Próximamente compartiré mis mejores momentos en competencias y entrenamientos.</p>
+  </section>
+
+  <section id="contacto">
+    <h2>Contacto</h2>
+    <p>Puedes escribirme a: <strong>carlos@ejemplo.com</strong></p>
+  </section>
+
+  <footer>
+    © 2025 El Blog de Carlos — Todos los derechos reservados
+  </footer>
+
+  <h1>Esta es mi primera página con GitHub Pages</h1>
+  <p>¡Gracias GitHub!</p>
+</body>
+</html>
